# nautilus_data

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml
bench_data/: check_invariant.py  extract_groups.py  extract_ts_init.py  gen_data_stats.py  quotes_0005.parquet  stats.csv
bench_data/multi_stream_data/: quotes_0005_20221101.parquet  quotes_0005_20221102.parquet  quotes_0005_20221103.parquet  quotes_0005_20221104.parquet  quotes_0005_20221108.parquet  quotes_0005_20221109.parquet  quotes_9626_20221101.parquet  quotes_9626_20221102.parquet  quotes_9626_20221103.parquet  quotes_9626_20221104.parquet  quotes_9626_20221108.parquet  quotes_9626_20221109.parquet  quotes_9868_20221101.parquet  quotes_9868_20221102.parquet  quotes_9868_20221103.parquet  quotes_9868_20221104.parquet  quotes_9868_20221108.parquet  quotes_9868_20221109.parquet  quotes_9961_20221101.parquet  quotes_9961_20221102.parquet  quotes_9961_20221103.parquet  quotes_9961_20221104.parquet  quotes_9961_20221108.parquet  quotes_9961_20221109.parquet  quotes_9999_20221101.parquet  quotes_9999_20221102.parquet  quotes_9999_20221103.parquet  quotes_9999_20221104.parquet  quotes_9999_20221108.parquet  quotes_9999_20221109.parquet  trades_0005_20221101.parquet  trades_0005_20221102.parquet  trades_0005_20221103.parquet  trades_0005_20221104.parquet  trades_0005_20221108.parquet  trades_0005_20221109.parquet  trades_9626_20221101.parquet  trades_9626_20221102.parquet  trades_9626_20221103.parquet  trades_9626_20221104.parquet  (+20 more)
nautilus_data/: example_backtest.py  hist_data_to_catalog.py  util.py
scripts/: example_backtest.py  hist_data_to_catalog.py  util.py
