[tool.poetry]
name = "nautilus_data"
version = "0.13.0"
description = ""
authors = ["Nautech Systems <info@nautechsystems.io>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
nautilus_trader = ">=1.194.0"
requests = "^2.32"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "C4",
    "E",
    "F",
    "W",
    "C90",
    "D",
    # "DTZ",
    "UP",
    "S",
    "T10",
    "ICN",
    "PIE",
    # "PT",
    "PYI",
    "Q",
    "I",
    "RSE",
    "TID",
    # "SIM",
    # "ARG",
    # "ERA",
    "PD",
    # "PGH",
    # "PLW",
    "NPY",
    "RUF",
]

ignore = [
    "D100",  # Missing docstring in public module  **fix**
    "D101",
    "D102",  # Missing docstring in public method  **fix**
    "D103",  # Missing docstring in public function  **fix**
    "D104",  # Missing docstring in public package  **fix**
    "D107",
    "D105",
    "D200",  # One-line docstring should fit on one line with quotes (optional style)
    "D203",  # 1 blank line required before class docstring (optional style)
    "D205",  # 1 blank line required between summary line and description (optional style)
    "D212",  # Multi-line docstring summary should start at the first line (optional style)
    "D400",  # First line should end with a period (not always a first line)
    "D413",  # Missing blank line after last section ('Parameters')
    "D415",  # First line should end with a period, question mark, or exclamation point (not always a first line)
    "D416",  # Section name should end with a colon ('Warnings:', not 'Warnings') (incorrect?)
    "E741",  # Ambiguous variable name (single char)
    "PD901", # `df` is a bad variable name. Be kinder to your future self
    "S101",  # Use of assert detected (OK in test suite)
    "S105",  # Use of hardcoded password (spurious)
    "S106",  # Use of hardcoded password (spurious)
    "S113",  # Probable use of requests call without timeout **fix**
]

# Allow autofix for all enabled rules (when `--fix`) is provided
fixable = [
    "A",
    "B",
    "C",
    "C4",
    "D",
    "DTZ",
    "E",
    "F",
    "UP",
    "S",
    "W",
    "I",
    "PIE",
    "PT",
    "PYI",
    "RSE",
    "TID",
    "ARG",
    "PD",
    "SIM",
    # "PGH",
    "NPY",
    "RUF",
]

unfixable = []

exclude = [
    ".benchmarks",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
    "venv",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.isort]
force-single-line = true
single-line-exclusions = ["typing"]
lines-after-imports = 2

[tool.ruff.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.11"
disallow_incomplete_defs = true
explicit_package_bases = true
ignore_missing_imports = true
namespace_packages = true
warn_no_return = true
warn_unused_configs = true
warn_unused_ignores = true
