[project]
name = "nautilus_data"
version = "0.16.0"
description = "Example data for use with NautilusTrader"
authors = [
    {name = "Nautech Systems", email = "info@nautechsystems.io"},
]
requires-python = "~=3.12"
dependencies = [
    "nautilus_trader>=1.215.0",
    "requests>=2.32.0,<3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
nautilus_trader = { index = "nautechsystems" }

[[tool.uv.index]]
name = "nautechsystems"
url = "https://packages.nautechsystems.io/simple"

##########################################################
# Formatter configs                                      #
##########################################################
[tool.black]
target_version = ["py312"]
line_length = 100

[tool.docformatter]
black = true
make-summary-multi-line = true
pre-summary-new-line = true
blank = true
recursive = true
in-place = true

##########################################################
# Linter configs                                         #
##########################################################
[tool.ruff]
target-version = "py312"
line-length = 100

exclude = [
    ".benchmarks",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "dist",
    "venv",
]

[tool.ruff.lint]
select = [
    "C4",
    "E",
    "F",
    "W",
    "C90",
    "D",
    # "DTZ",
    "UP",
    "S",
    "T10",
    "ICN",
    "PIE",
    # "PT",
    "PYI",
    "Q",
    "I",
    "RSE",
    "TID",
    # "SIM",
    # "ARG",
    # "ERA",
    "PD",
    # "PGH",
    # "PLW",
    "NPY",
    "RUF",
]

ignore = [
    "D100",  # Missing docstring in public module  **fix**
    "D101",
    "D102",  # Missing docstring in public method  **fix**
    "D103",  # Missing docstring in public function  **fix**
    "D104",  # Missing docstring in public package  **fix**
    "D107",
    "D105",
    "D200",  # One-line docstring should fit on one line with quotes (optional style)
    "D203",  # 1 blank line required before class docstring (optional style)
    "D205",  # 1 blank line required between summary line and description (optional style)
    "D212",  # Multi-line docstring summary should start at the first line (optional style)
    "D400",  # First line should end with a period (not always a first line)
    "D413",  # Missing blank line after last section ('Parameters')
    "D415",  # First line should end with a period, question mark, or exclamation point (not always a first line)
    "D416",  # Section name should end with a colon ('Warnings:', not 'Warnings') (incorrect?)
    "E741",  # Ambiguous variable name (single char)
    "PD901", # `df` is a bad variable name. Be kinder to your future self
    "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar`
    "S101",  # Use of assert detected (OK in test suite)
    "S105",  # Use of hard-coded password (spurious)
    "S106",  # Use of hard-coded password (spurious)
    "S113",  # Probable use of requests call without timeout **fix**
    "S603",  # `subprocess` call: check for execution of untrusted input **fix**
]

# Allow autofix for all enabled rules (when `--fix`) is provided
fixable = ["ALL"]

unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.isort]
combine-as-imports = true
force-single-line = true
single-line-exclusions = ["typing"]
lines-after-imports = 2
split-on-trailing-comma = true

[tool.ruff.mccabe]
max-complexity = 10

##########################################################
# Static analysis configs                                #
##########################################################
[tool.mypy]
python_version = "3.12"
# disallow_incomplete_defs = true
explicit_package_bases = true
ignore_missing_imports = true
namespace_packages = true
no_strict_optional = true
warn_no_return = true
warn_unused_configs = true
warn_unused_ignores = true
